[package]
name = "teenytiny-rust-openai-integration"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "integration_test"
path = "src/main.rs"

[dependencies]
async-openai = "0.26"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"